--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "multer": "^1.4.4",
+    "sib-api-v3-sdk": "^8.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
